2007-01-19  Anders Carlsson  <acarlsson@apple.com>

        Yet another build fix.
        
        * WebCoreSupport/WebChromeClient.h:
        * WebCoreSupport/WebChromeClient.mm:
        (WebChromeClient::setStatusbarText):

2007-01-18  Anders Carlsson  <acarlsson@apple.com>

        Reviewed by Adam.

        Move functions from the bridge to the chrome client.
        
        * WebCoreSupport/WebChromeClient.h:
        * WebCoreSupport/WebChromeClient.mm:
        (WebChromeClient::runJavaScriptAlert):
        (WebChromeClient::runJavaScriptConfirm):
        (WebChromeClient::runJavaScriptPrompt):
        (WebChromeClient::setStatusBarText):
        * WebCoreSupport/WebFrameBridge.mm:

2007-01-18  Adam Roben  <aroben@apple.com>

        Reviewed by Beth.

        Fix <rdar://problem/4939672> REGRESSION: With text selected that is
        not a link, the "Remove Link" contextual menu item remains active

        * WebView/WebHTMLView.mm:
        (-[WebHTMLView menuForEvent:]): Leave autoenabling of menu items on so
        that clients can implement validateMenuItem:.

2007-01-18  Brady Eidson  <beidson@apple.com>

        Reviewed by Adele

        <rdar://problem/4917290> - 
        Null deref in WebFrameLoaderClient::restoreScrollPositionAndViewState() 
        after regaining network connection

        * WebCoreSupport/WebFrameLoaderClient.mm:
        (WebFrameLoaderClient::restoreScrollPositionAndViewState): Bail early with a null currentItem, preventing 
        a crash in release builds.  Leave the ASSERT to help find other cases where this might happen in debug builds.

2007-01-18  Kevin Decker  <kdecker@apple.com>

        Reviewed by John.

        <rdar://problem/4939511> WebKit should set the CG clip path for plug-ins that draw using CoreGraphics

        * Plugins/WebBaseNetscapePluginView.mm:
        (-[WebBaseNetscapePluginView drawRect:]):  Set the CG clip path to the plug-in dirty rect. This allows plug-ins to obtain their